--- a/globals/static/index.html
+++ b/globals/static/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RSS Reader</title>
-  <meta name="description" content='RSS Reader，一个将订阅信息聚合展示的开源web工具，便于了解近期关注的信息，同时页面数据数据也实现了自动刷新。'>
+  <title>创业资讯</title>
+  <meta name="description" content='创业资讯，你关注的最新公司，最新技术都在这里。'>
   <meta name="keywords" content="<< .Keywords >>">
   <meta name="anthor" content="srcrs">
   <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"> -->
