--- a/globals/static/index.html
+++ b/globals/static/index.html
@@ -73,7 +73,7 @@
     <el-container>
       <el-header>
         <h1>
-          RSS Reader
+          创业资讯
           << if gt .AutoUpdatePush 0 >>
             <span v-show="isPc"><br/>{{ countdown }} s</span>
           << end >>
